# urelativedelta

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benches/: bench.py
relativedelta/: relativedelta.py  utils.py
tests/: test_daterule.py  test_relativedelta.py  test_utils.py
urelativedelta/: __init__.py  daterule.py  relativedelta.py  utils.py
